fix gap in output

--- a/_sass/open-coding/forms/code-runner.scss
+++ b/_sass/open-coding/forms/code-runner.scss
@@ -45,8 +45,8 @@
     border: 1px solid var(--ui-border);
   }
 
-  // Control bar (top and bottom bars)
-  .control-bar {
+  // Control panel (top and bottom bars)
+  .control-panel {
     @include control-panel;
   }
 
